# lab_Example

./: CMakeLists.txt  Makefile  battle_stats.txt  main.cpp  npc.txt  test.txt
include/: BaseFigure.hpp  Figure.h  FigureValidator.h  Hexagon.h  IFigurValidator.h  IFigureValidator.h  Money.h  Octagon.h  Pentagon.h  PentagonValidator.h  Point.h  Rombus.h  RombusValidator.h  Trapezoid.h  TrapezoidValidator.h  Triangle.h  Vector.h  baseFigure.hpp  factory.hpp  fight.hpp  function.h  include.h  knight.hpp  lib.h  list.h  merchant.hpp  npc.hpp  observer.hpp  squirrel.hpp  vector.hpp
src/lab0/: Hexagon.cpp  Money.cpp  Octagon.cpp  Point.cpp  Triangle.cpp  Vector.cpp  allocator.cpp  factory.cpp  fight.cpp  knight.cpp  lib.cpp  merchant.cpp  npc.cpp  observer.cpp  squirrel.cpp  vector.cpp
test/: Hexagon_test.cpp  Octagon_test.cpp  PentagonTest.cpp  RombusTest.cpp  TrapezoidTest.cpp  Triangle_test.cpp  hello_test.cpp  hexagonTest.cpp  hexagon_test.cpp  octagonTest.cpp  octagon_test.cpp  point_test.cpp  test_allocator.cpp  test_factory.cpp  test_fight.cpp  test_knight.cpp  test_list.cpp  test_merchant.cpp  test_squirrel.cpp  triangleTest.cpp  triangle_test.cpp
